# Spark

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  spark-shell.html
include/: EditorUI.h  IImGuiRenderable.h  IInitializable.h  IInspectorRenderable.h  IRenderable.h  IUpdateable.h  InspectorPanel.h  LuaInstance.h  Renderer.h  Scene.h  SceneGraphPanel.h  SceneManager.h  Singleton.h  Window.h  component.h  gameobject.h  testComponent.h
include/Components/: ScriptComponent.h  ScriptSwitcherComponent.h  TransformComponent.h
res/: draggable_physics_sim.lua  flocking_boids.lua  gravity_simulation.lua  orbiting_particles.lua  particle_fountain.lua  particles.lua  test.lua  wave_painter.lua
res/configs/: imgui.ini
src/: CMakeLists.txt  EditorUI.cpp  InspectorPanel.cpp  LuaInstance.cpp  Renderer.cpp  Scene.cpp  SceneGraphPanel.cpp  SceneManager.cpp  Window.cpp  gameobject.cpp  main.cpp
src/Components/: ScriptComponent.cpp  TransformComponent.cpp
